# hpm-demo

./: .gitignore  CMakeLists.txt  download.sh
adc/: main
adc/inc/: config.h  misc.h
adc/libs/hmi_drv/: hmi_drv.c  hmi_drv.h
adc/pinmux/: pinmux.hpmpc  pinmux_pinmux.c
adc/src/: config.c  err_print.c  init.c  interrupts.c  misc.c
dac/: CMakeLists.txt
dac/inc/: err_print.h  init.h  interrupts.h  main.h  misc.h
dac/pinmux/: pinmux.hpmpc  pinmux_pinmux.h
dac/src/: init.c  interrupts.c  main.c  misc.c
hmi/: CMakeLists.txt
hmi/libs/dma/: dma.c
inc/: err_print.h  init.h  interrupts.h  main.h
libs/dma/: dma.h
pwm/: CMakeLists.txt
pwm/inc/: init.h  interrupts.h  main.h
pwm/src/: config.c  err_print.c  init.c  interrupts.c  main.c
src/: config.c  init.c  interrupts.c  main.c
